# my_study

./: FriendlyArm.md  c++.md  git.md  opencv.md  python.md  readme.md  useful_command.md  zbar.md
Net/: README.md
Opencv/: opencv.md  zbar.md
Redis/: README.md
School/: vpn.md
cpp/: keyboard.cpp  zbar_test.cpp
go/: go.md  helloWorld.go  mqtt.md
mqtt/: pub.py  readme.md  sub.py
other/: HighConcurrency.md
protobuf/: readme.md  test.proto  test.py  test_pb2.py
ros/: opencr.md  ros-python.md  ros.md
ros/dynamixel_state_plot/: CMakeLists.txt  package.xml  readme.md
ros/dynamixel_state_plot/scripts/: dynamixel_state_plot.py
ros2/: readme.md  ros2_ament.md  ros2_create_pkg.md  ros2_create_self_msgs.md  ros2_study.md  ros2_use_srv.md
tensorflow/: README.md
tensorflow/cpp/: CMakeLists.txt
tensorflow/cpp/src/: test.cpp
ubuntu/: readme.md
vscode/: README.md  test.drawio
